RESOLVED FIXED211626
REGRESSION(r259209) Webview's pending URL is null after restoring session state
https://bugs.webkit.org/show_bug.cgi?id=211626
Summary REGRESSION(r259209) Webview's pending URL is null after restoring session state
Chris Dumez
Reported 2020-05-08 08:42:13 PDT
Webview's pending URL is null after restoring session state since r259209.
Attachments
Patch (6.61 KB, patch)
2020-05-08 08:46 PDT, Chris Dumez
no flags
Patch (6.68 KB, patch)
2020-05-08 09:40 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-05-08 08:42:36 PDT
Chris Dumez
Comment 2 2020-05-08 08:46:15 PDT
Chris Dumez
Comment 3 2020-05-08 09:40:40 PDT
EWS
Comment 4 2020-05-08 10:34:03 PDT
Committed r261394: <https://trac.webkit.org/changeset/261394> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398866 [details].
Note You need to log in before you can comment on or make changes to this bug.