Tools/TestWebKitAPI/Tests/WebKit/RestoreSessionState.cpp
@@ -137,6 +137,24 @@ TEST(WebKit, RestoreSessionStateAfterClose)
     auto sessionState = adoptWK(WKSessionStateCreateFromData(data.get()));
     WKPageRestoreFromSessionState(webView.page(), sessionState.get());
 }
+
+TEST(WebKit, PendingURLAfterRestoreSessionState)
+{
+    auto context = adoptWK(WKContextCreateWithConfiguration(nullptr));
+    PlatformWebView webView(context.get());
+    setPageLoaderClient(webView.page());
+    auto data = createSessionStateData(context.get());
+    EXPECT_NOT_NULL(data);
+    auto sessionState = adoptWK(WKSessionStateCreateFromData(data.get()));
+    WKPageRestoreFromSessionState(webView.page(), sessionState.get());
+    auto pendingURL = adoptWK(WKPageCopyPendingAPIRequestURL(webView.page()));
+    EXPECT_NOT_NULL(pendingURL);
+    if (!pendingURL)
+        return;
+
+    auto expectedURL = adoptWK(Util::createURLForResource("simple-form", "html"));
+    EXPECT_WK_STREQ(adoptWK(WKURLCopyString(expectedURL.get())).get(), adoptWK(WKURLCopyString(pendingURL.get())).get());
+}
     
 } // namespace TestWebKitAPI
 
